welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:4: error: type mismatch;
 found   : Unit
 required: Boolean
while( x="yellow") { avance();}
        ^